# tema3paooC

src/: CMakeLists.txt  main.cpp
src/SharedCollection/: CMakeLists.txt  SharedCollection.cpp  SharedCollection.h
src/Vehicle/: CMakeLists.txt  IVehicle.h  Vehicle.cpp  Vehicle.h
src/Vehicle/Boat/: Boat.cpp  Boat.h  CMakeLists.txt
src/Vehicle/Car/: CMakeLists.txt  Car.cpp  Car.h
src/Vehicle/GenericCollection/: CMakeLists.txt  GenericCollection.cpp  GenericCollection.h
src/VehiclesCollection/: CMakeLists.txt  VehiclesCollection.cpp  VehiclesCollection.h
